--- a/include/libxml/CMakeLists.txt
+++ b/include/libxml/CMakeLists.txt
@@ -36,7 +36,7 @@ SET(WITH_SCHEMATRON 1)
 SET(WITH_MODULES 1)
 SET(WITH_ZLIB 1)
 SET(WITH_LZMA 1)
-SET(LIBXML_VERSION_NUMBER "1.0")
+SET(LIBXML_VERSION_NUMBER 20700)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/xmlversion.h.in ${CMAKE_CURRENT_BINARY_DIR}/xmlversion.h)
 
